--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,10 +7,10 @@ body {
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
+  background-color: lemonchiffon;
   color: #212121;
   line-height: 1.5;
-   
+ font-size: large;
 }
 
 #search-box {
@@ -18,4 +18,6 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+  
 }
+
